--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,20 @@ section.banner1 {
     opacity: .5;
     z-index: 1 !important;
 }
+
+@media only screen and (max-width: 991px) {
+    .mT-50{
+        margin-top: 50px!important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .centerElem{
+        float: none!important;
+        margin: 0 auto!important;
+    }
+}
+
 @media only screen and (max-width: 768px) {
 section.banner {
     height: auto;
