--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,10 @@ section.banner1 {
   z-index: 1 !important;
 }
 
+.btn--white {
+  color: black;
+}
+
 @media only screen and (max-width: 991px) {
   .mT-50 {
     margin-top: 50px !important;
@@ -305,23 +309,6 @@ section.banner1 {
   transition: all .5s .2s;
 }
 
-.popup__left {
-  width: 33.333333%;
-  display: table-cell;
-}
-
-.popup__right {
-  width: 66.6666667%;
-  display: table-cell;
-  vertical-align: middle;
-  padding: 3rem 5rem;
-}
-
-.popup__img {
-  display: block;
-  width: 100%;
-}
-
 .popup__text {
   font-size: 1.4rem;
   margin-bottom: 4rem;
@@ -353,9 +340,9 @@ section.banner1 {
 .popup__close:link, .popup__close:visited {
   color: #dfd7d7;
   position: absolute;
-  top: 2.5rem;
-  right: 2.5rem;
-  font-size: 3rem;
+  top: .2rem;
+  right: 1rem;
+  font-size: 2rem;
   text-decoration: none;
   display: inline-block;
   -webkit-transition: all .2s;
