--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,9 @@ section.banner1 {
     opacity: .5;
     z-index: 1 !important;
 }
+.btn--white{
+    color:black;
+}
 
 @media only screen and (max-width: 991px) {
     .mT-50{
@@ -267,7 +270,6 @@ footer .text-right {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-
         width: 75%;
         background-color: #ffe;
         box-shadow: 0 2rem 4rem rgba(0,0,0,.2);
@@ -279,35 +281,20 @@ footer .text-right {
         transition: all .5s .2s;
     }
 
-    &__left {
-        width: 33.333333%;
-        display: table-cell;
-    }
-
-    &__right {
-        width: 66.6666667%;
-        display: table-cell;
-        vertical-align: middle;
-        padding: 3rem 5rem;
-    }
-
-    &__img {
-        display: block;
-        width: 100%;
-    }
+    // &__img {
+    //     display: block;
+    //     width: 100%;
+    // }
 
     &__text {
         font-size: 1.4rem;
         margin-bottom: 4rem;
-
         -moz-column-count: 2;
         -moz-column-gap: 4rem; //1em = 14px;
         -moz-column-rule: 1px solid rgba(177, 211, 211, 0.664);
-
         column-count: 2;
         column-gap: 4rem; //1em = 14px;
         column-rule: 1px solid rgba(177, 211, 211, 0.664);
-
         -moz-hyphens: auto;
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
@@ -330,9 +317,9 @@ footer .text-right {
         &:visited {
             color: rgb(223, 215, 215);
             position: absolute;
-            top: 2.5rem;
-            right: 2.5rem;
-            font-size: 3rem;
+            top: .2rem;
+            right: 1rem;
+            font-size: 2rem;
             text-decoration: none;
             display: inline-block;
             transition: all .2s;
