--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,56 @@ section.banner1 {
   z-index: 1 !important;
 }
 
+/* abayomi styles Start */
+#panel1011{
+     margin-left: 7rem;
+}
+#originFrom,
+#destinationTo,
+#departing-date-picker,
+#returning-date-picker{
+  width: 13rem;
+  /* margin: 1rem; */
+}
+#departing-date-picker{
+   margin-left: 5rem;
+}
+#returning-date-picker{
+  margin-left: 6rem;
+}
+#one_wayANDround_trip{
+  margin-left: 19rem;
+  margin-bottom: 1rem;
+}
+#adultNumber,
+#childrenNumber,
+#classType
+#flight_saveAndBook{
+  width: 13rem ;
+}
+#childrenNumber{
+margin-left: 0.5rem;
+}
+#classType{
+  width: 13rem;
+  margin-left: 5.8rem;
+  height: 45px;
+}
+#flight_saveAndBook{
+  height: 45px;
+  padding: 8px;
+  margin-left: -6rem;
+  margin-top: 4rem;
+}
+.belowDiv{
+  margin-top: 2rem;
+}
+.classtype_text{
+  margin-left: 7rem;
+  margin-left: 7rem;
+}
+
+/* abayomi styles end */
 @media only screen and (max-width: 768px) {
   section.banner {
     height: auto;
