dev branches merged

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,16 @@
-body{
+body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .scrollbar {
     float: left;
     height: 170px;
-    width:100%;
+    width: 100%;
     background: #fff;
     overflow-y: scroll;
     margin-bottom: 25px;
 }
+
 section.top-routes {
     text-align: center;
 }
@@ -17,21 +19,25 @@ section.top-routes {
     padding-right: 10px;
     border-right: 1px solid #d4d4d4;
 }
+
 .scrollbar-primary::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5; }
+    width: 12px;
+    background-color: #F5F5F5;
+}
 
 .scrollbar-primary::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: orange; }
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: orange;
+}
 
 .scrollbar-warning::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #F5F5F5;
-  border-radius: 10px; }
-
-  
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
 
 .card:hover {
     border: 1px solid #ED8323;
@@ -40,13 +46,15 @@ section.top-routes {
 a.nav-link.waves-effect.waves-light:hover {
     background: orange;
 }
-a.nav-link.active{
-	       background: orange;
+
+a.nav-link.active {
+    background: orange;
 }
 
 a.nav-link.waves-light.active {
     background: #FF9800;
 }
+
 div.scrollmenu {
     background-color: transparent;
     overflow: auto;
@@ -54,15 +62,19 @@ div.scrollmenu {
 }
 
 div.scrollmenu ul li a {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     color: white;
     text-align: center;
     padding: 14px;
     text-decoration: none;
 }
+
 .classic-tabs {
     margin-top: 170px;
 }
+
 div.scrollmenu li.nav-item {
     display: inline-block;
 }
@@ -72,179 +84,321 @@ section.banner {
     padding: 50px 120px 50px 120px;
     background: #001650;
 }
+
 section.banner1 {
-      background: linear-gradient(#0e3c5a,#01304d, #125681,#063652);
+    background: -webkit-gradient(linear, left top, left bottom, from(#0e3c5a), color-stop(#01304d), color-stop(#125681), to(#063652));
+    background: linear-gradient(#0e3c5a, #01304d, #125681, #063652);
 }
+
 .modal-body a.nav-link.active {
     background: #33b6e5;
     color: #fff;
-} 
+}
+
 .modal-body a.nav-link {
     color: #212020;
 }
+
 .modal-header {
     background: #06b4c7;
     color: #fff;
 }
+
 .modal-body ul.nav.md-pills.pills-primary.flex-column {
     border-right: 1px solid #ebebeb;
 }
+
 .modal-backdrop.show {
     opacity: .5;
     z-index: 1 !important;
 }
-.btn--white{
-    color:black;
+
+/* abayomi styles Start */
+#panel1011 {
+    margin-left: 7rem;
+}
+
+#originFrom,
+#destinationTo,
+#departing-date-picker,
+#returning-date-picker {
+    width: 13rem;
+    /* margin: 1rem; */
+}
+
+#departing-date-picker {
+    margin-left: 5rem;
+}
+
+#returning-date-picker {
+    margin-left: 6rem;
+}
+
+#one_wayANDround_trip {
+    margin-left: 19rem;
+    margin-bottom: 1rem;
+}
+
+#adultNumber,
+#childrenNumber,
+#classType #flight_saveAndBook {
+    width: 13rem;
+}
+
+#childrenNumber {
+    margin-left: 0.5rem;
+}
+
+#classType {
+    width: 13rem;
+    margin-left: 5.8rem;
+    height: 45px;
+}
+
+#flight_saveAndBook {
+    height: 45px;
+    padding: 8px;
+    margin-left: -6rem;
+    margin-top: 4rem;
+}
+
+.belowDiv {
+    margin-top: 2rem;
+}
+
+.classtype_text {
+    margin-left: 7rem;
+    margin-left: 7rem;
 }
 
 @media only screen and (max-width: 991px) {
-    .mT-50{
+    .mT-50 {
         margin-top: 50px!important;
     }
 }
 
 @media only screen and (max-width: 767px) {
-    .centerElem{
-        float: none!important;
-        margin: 0 auto!important;
+    .centerElem {
+        float: none !important;
+        margin: 0 auto !important;
     }
 }
 
 @media only screen and (max-width: 768px) {
-section.banner {
-    height: auto;
-    padding: 0; 
-    background: #001650;
-    width: 100%;
-}
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 5px 8px 5px 8px;
-}
-.section-img img {
-    width: 100%;
-}
-section.banner1 {
-    padding: 0; 
-    background: #001650;
-    width: 100%;
-}
-.classic-tabs {
-    margin-top: 75px;
-}
-.view.banner{
-    height: 500px !important;
-}
-h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
-    text-align: center !important;
-}
-div#carousel-example-1z .carousel-item {
-    height: 180px;
-}
-.carousel-caption {
-    top: 0;
-}
-img.d-block.w-100 {
-    height: 180px;
-}
+    section.banner {
+        height: auto;
+        padding: 0;
+        background: #001650;
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 8px;
+    }
+
+    .section-img img {
+        width: 100%;
+    }
+
+    section.banner1 {
+        padding: 0;
+        background: #001650;
+        width: 100%;
+    }
+
+    .classic-tabs {
+        margin-top: 75px;
+    }
+
+    .view.banner {
+        height: 500px !important;
+    }
+
+    h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
+        text-align: center !important;
+    }
+
+    div#carousel-example-1z .carousel-item {
+        height: 180px;
+    }
+
+    .carousel-caption {
+        top: 0;
+    }
+
+    img.d-block.w-100 {
+        height: 180px;
+    }
 
 }
+
+/* abayomi styles end */
+@media only screen and (max-width: 768px) {
+    section.banner {
+        height: auto;
+        padding: 0;
+        background: #001650;
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 8px 5px 8px;
+    }
+
+    .section-img img {
+        width: 100%;
+    }
+
+    section.banner1 {
+        padding: 0;
+        background: #001650;
+        width: 100%;
+    }
+
+    .classic-tabs {
+        margin-top: 75px;
+    }
+
+    .view.banner {
+        height: 500px !important;
+    }
+
+    h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
+        text-align: center !important;
+    }
+
+    div#carousel-example-1z .carousel-item {
+        height: 180px;
+    }
+
+    .carousel-caption {
+        top: 0;
+    }
+
+    img.d-block.w-100 {
+        height: 180px;
+    }
+}
+
 @media only screen and (max-width: 560px) {
-.view.ng-scope {
-    height: 560px !important;
-}
-.animated.zoomInRight {
+    .view.ng-scope {
+        height: 560px !important;
+    }
 
-    text-align: center;
+    .animated.zoomInRight {
+        text-align: center;
+    }
 
-}
-.navbar.navbar-expand-lg.navbar-dark.white.lighten-2.py-3 {
-    text-align: center;
-}
-.tab-content {
-    width: 100%;
-}
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 5px 6px 5px 6px;
-    margin: 20px 0 5px 0px;
-}
-.view.banner {
-    height: 1070px !important;
-}
-h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
-    text-align: center !important;
-}
-section .row.wow.fadeIn .col-lg-6.col-md-12 {
-    text-align: center;
-}
+    .navbar.navbar-expand-lg.navbar-dark.white.lighten-2.py-3 {
+        text-align: center;
+    }
+
+    .tab-content {
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 6px 5px 6px;
+        margin: 20px 0 5px 0px;
+    }
+
+    .view.banner {
+        height: 1070px !important;
+    }
+
+    h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
+        text-align: center !important;
+    }
+
+    section .row.wow.fadeIn .col-lg-6.col-md-12 {
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width: 425px) {
-section.banner {
-    height: auto;
-    background: #001650;
-    width: 100%;
+    section.banner {
+        height: auto;
+        background: #001650;
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 8px 17px 8px 16px;
+        margin: 20px 3px 8px 3px;
+    }
+
+    .view.ng-scope {
+        height: 560px !important;
+    }
+
+    section.banner.mt-5 img {
+        height: 160px;
+    }
+
+    section.banner1 {
+        background: #001650;
+        width: 100%;
+    }
+
+    .classic-tabs {
+        margin-top: 60px;
+    }
+
+    .whatwedo .tab-pane a {
+        width: 170px;
+    }
+
+    footer .text-right {
+        text-align: center;
+    }
 }
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 8px 17px 8px 16px;
-    margin: 20px 3px 8px 3px;
+
+@media only screen and (max-width: 375px) {
+    .whatwedo .tab-pane a {
+        width: 150px;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 10px 5px 10px;
+        margin: 20px 3px 8px 3px;
+    }
 }
-.view.ng-scope {
-    height: 560px !important;
-}
-section.banner.mt-5 img {
-    height: 160px;
-}
-section.banner1 {
-    background: #001650;
-    width: 100%;
-}
-.classic-tabs {
-    margin-top: 60px;
-}
-.whatwedo .tab-pane a {
-    width: 170px;
-}
-footer .text-right {
-    text-align: center;
-}
-}
-@media only screen and (max-width:375px){
-.whatwedo .tab-pane a {
-    width: 150px;
-}
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 5px 10px 5px 10px;
-    margin: 20px 3px 8px 3px;
-}
-}
+
 @media only screen and (max-width: 360px) {
-section.banner {
-    height: auto;
-    background: #001650;
-    width: 100%;
-}
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 5px 8px 5px 8px;
-}
-.view.ng-scope {
-    height: 560px !important;
-}
-section.banner.mt-5 img {
-    height: 160px;
-}
-section.banner1 {
-    background: #001650;
-    width: 100%;
-}
-.classic-tabs {
-    margin-top: 60px;
-}
-.whatwedo .tab-pane a {
-    width: 143px;
-}
-footer .text-right {
-    text-align: center;
-}
+    section.banner {
+        height: auto;
+        background: #001650;
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 8px 5px 8px;
+    }
+
+    .view.ng-scope {
+        height: 560px !important;
+    }
+
+    section.banner.mt-5 img {
+        height: 160px;
+    }
+
+    section.banner1 {
+        background: #001650;
+        width: 100%;
+    }
+
+    .classic-tabs {
+        margin-top: 60px;
+    }
+
+    .whatwedo .tab-pane a {
+        width: 143px;
+    }
+
+    footer .text-right {
+        text-align: center;
+    }
 }
 
 .popup {
@@ -253,117 +407,144 @@ footer .text-right {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 9999;
     opacity: 0;
     visibility: hidden;
+    -webkit-transition: all .3s;
     transition: all .3s;
+}
 
-    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+@supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+    .popup {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
-        background-color: rgba(0,0,0,.3);
-    }
-
-    &__content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 75%;
-        background-color: #ffe;
-        box-shadow: 0 2rem 4rem rgba(0,0,0,.2);
-        border-radius: 3px;
-        display: table;
-        overflow: hidden;
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(.25);
-        transition: all .5s .2s;
-    }
-
-    // &__img {
-    //     display: block;
-    //     width: 100%;
-    // }
-
-    &__text {
-        font-size: 1.4rem;
-        margin-bottom: 4rem;
-        -moz-column-count: 2;
-        -moz-column-gap: 4rem; //1em = 14px;
-        -moz-column-rule: 1px solid rgba(177, 211, 211, 0.664);
-        column-count: 2;
-        column-gap: 4rem; //1em = 14px;
-        column-rule: 1px solid rgba(177, 211, 211, 0.664);
-        -moz-hyphens: auto;
-        -ms-hyphens: auto;
-        -webkit-hyphens: auto;
-        hyphens: auto;
-    }
-
-    //Open states
-    &:target {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    &:target &__content {
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
-    }
-
-    &__close {
-        &:link,
-        &:visited {
-            color: rgb(223, 215, 215);
-            position: absolute;
-            top: .2rem;
-            right: 1rem;
-            font-size: 2rem;
-            text-decoration: none;
-            display: inline-block;
-            transition: all .2s;
-            line-height: 1;
-        }
-
-        &:hover {
-            color: rgba(91, 146, 91, 0.876);
-        }
+        background-color: rgba(0, 0, 0, 0.3);
     }
 }
 
+.popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: #ffe;
+    -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    -webkit-transform: translate(-50%, -50%) scale(0.25);
+    transform: translate(-50%, -50%) scale(0.25);
+    -webkit-transition: all .5s .2s;
+    transition: all .5s .2s;
+}
+
+.popup__left {
+    width: 33.333333%;
+    display: table-cell;
+}
+
+.popup__right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
+}
+
+.popup__img {
+    display: block;
+    width: 100%;
+}
+
+.popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid rgba(177, 211, 211, 0.664);
+    -webkit-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 4rem;
+    column-gap: 4rem;
+    -webkit-column-rule: 1px solid rgba(177, 211, 211, 0.664);
+    column-rule: 1px solid rgba(177, 211, 211, 0.664);
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.popup:target {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup:target .popup__content {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.popup__close:link,
+.popup__close:visited {
+    color: #dfd7d7;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+    line-height: 1;
+}
+
+.popup__close:hover {
+    color: rgba(91, 146, 91, 0.876);
+}
 
 @media only screen and (max-width: 320px) {
-section.banner {
-    height: 160px;
-    background: #001650;
-    width: 100%;
+    section.banner {
+        height: 160px;
+        background: #001650;
+        width: 100%;
+    }
+
+    button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
+        padding: 5px 6px 5px 6px;
+        margin: 20px 0 5px 0px;
+    }
+
+    section.banner1 {
+        padding: 0;
+        background: #001650;
+        width: 100%;
+    }
+
+    .classic-tabs {
+        margin-top: 60px;
+    }
+
+    .whatwedo .tab-pane a {
+        width: 120px;
+    }
 }
-button.btn.btn-sm.btn-outline-warning.waves-effect.waves-light {
-    padding: 5px 6px 5px 6px;
-    margin: 20px 0 5px 0px;
-}
-section.banner1 {
-    padding: 0; 
-    background: #001650;
-    width: 100%;
-}
-.classic-tabs {
-    margin-top: 60px;
-}
-.whatwedo .tab-pane a {
-    width: 120px;
-}
-}
+
 .modal-dialog {
     max-width: 1000px;
 }
+
 .waves-input-wrapper.waves-effect.waves-light {
     width: 100%;
 }
-div#accordionEx5{
-	width:100%;
+
+div#accordionEx5 {
+    width: 100%;
 }
+
 .panel-body {
     padding: 20px 10px 0px 10px;
     line-height: 1.6;
@@ -372,13 +553,17 @@ div#accordionEx5{
     margin: 0 0 10px;
     text-align: justify;
 }
+
 .table.table-bordered tbody tr th {
     color: #000;
 }
+
 .table.table-bordered tbody tr td {
     color: #000;
 }
+
 .uib-tab.nav-item.ng-scope.ng-isolate-scope a {
     color: blue;
 }
 
+/*# sourceMappingURL=main.css.map */
