--- a/css/main.scss
+++ b/css/main.scss
@@ -212,10 +212,10 @@ section.banner1 {
 
   .view.banner {
       height: 500px !important;
-  }
+  }orange-text
 
-  h3.h4.white-text.text-left.mt-5.mb-5.wow.bounceInDown {
-      text-align: center !important;
+  horange-text-left.mt-5.mb-5.wow.bounceInDown {
+   orange-textr !important;
   }
 
   div#carousel-example-1z .carousel-item {
